--- a/menu.html
+++ b/menu.html
@@ -107,32 +107,32 @@
             </div>
 
             <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
-                <!-- ======= Хаус ======= -->
-                <div class="col-lg-6 menu-item filter-house">
-                    <div class="menu-sections">
-                        <h2>Хаус</h2>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-house">
-                    <div class="menu-content">
-                        <a>Виски Хаус</a><span>₽30</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-house">
-                    <div class="menu-content">
-                        <a>Водка Хаус</a><span>₽30</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-house">
-                    <div class="menu-content">
-                        <a>Игристое Хаус</a><span>₽150</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-house">
-                    <div class="menu-content">
-                        <a>Ром хаус</a><span>₽30</span>
-                    </div>
-                </div>
+<!--                &lt;!&ndash; ======= Хаус ======= &ndash;&gt;-->
+<!--                <div class="col-lg-6 menu-item filter-house">-->
+<!--                    <div class="menu-sections">-->
+<!--                        <h2>Хаус</h2>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-lg-6 menu-item filter-house">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a>Виски Хаус</a><span>₽30</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-lg-6 menu-item filter-house">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a>Водка Хаус</a><span>₽30</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-lg-6 menu-item filter-house">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a>Игристое Хаус</a><span>₽150</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-lg-6 menu-item filter-house">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a>Ром хаус</a><span>₽30</span>-->
+<!--                    </div>-->
+<!--                </div>-->
 
                 <!-- ======= Бренди ======= -->
                 <div class="col-lg-6 menu-item filter-brandy">
