--- a/menu.html
+++ b/menu.html
@@ -101,7 +101,7 @@
                         <li data-filter=".filter-beer">Пиво</li>
                         <li data-filter=".filter-rum">Ром</li>
                         <li data-filter=".filter-tequila">Текила</li>
-                        <li data-filter=".filter-house">Хаус</li>
+<!--                        <li data-filter=".filter-house">Хаус</li>-->
                     </ul>
                 </div>
             </div>
