--- a/menu.html
+++ b/menu.html
@@ -1264,7 +1264,7 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
-                        <a>Вяленное мясо</a><span>₽300</span>
+                        <a>Вяленное мясо</a><span>₽350</span>
                     </div>
                     <div class="menu-ingredients">
                         Говядина
@@ -1275,7 +1275,7 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
-                        <a>Вяленное мясо</a><span>₽300</span>
+                        <a>Вяленное мясо</a><span>₽250</span>
                     </div>
                     <div class="menu-ingredients">
                         Курица
@@ -1305,7 +1305,7 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
-                        <a>Фри,Айдахо</a><span>₽100</span>
+                        <a>Фри</a><span>₽100</span>
                     </div>
                     <div class="menu-size">
                         <a>100 гр</a>
@@ -1313,27 +1313,35 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
-                        <a>Крылья Баффало 7шт</a><span>₽120</span>
+                        <a>Айдахо</a><span>₽120</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>100 гр</a>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
-                        <a>Ножки 3шт</a><span>₽140</span>
+                        <a>Крылья Баффало 7шт</a><span>₽320</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
-                        <a>Купаты 2шт</a><span>₽140</span>
+                        <a>Ножки 3шт</a><span>₽320</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
-                        <a>Наггетсы 6шт</a><span>₽140</span>
+                        <a>Купаты 2шт</a><span>₽390</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
-                        <a>Паутинка с мясом</a><span>₽140</span>
+                        <a>Наггетсы 6шт</a><span>₽130</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-kitchen">
+                    <div class="menu-content">
+                        <a>Паутинка с мясом</a><span>₽300</span>
                     </div>
                     <div class="menu-size">
                         <a>220 гр</a>
@@ -1341,7 +1349,7 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
-                        <a>Пельмени</a><span>₽140</span>
+                        <a>Пельмени</a><span>₽150</span>
                     </div>
                     <div class="menu-size">
                         <a>100 гр</a>
@@ -1349,7 +1357,7 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
-                        <a>Сало два вида</a><span>₽140</span>
+                        <a>Сало два вида</a><span>₽250</span>
                     </div>
                     <div class="menu-size">
                         <a>60 гр</a>
@@ -1357,7 +1365,7 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
-                        <a>Сыр косичка</a><span>₽140</span>
+                        <a>Сыр косичка</a><span>₽200</span>
                     </div>
                     <div class="menu-size">
                         <a>100 гр</a>
@@ -1368,7 +1376,7 @@
                         <a>Фисташки </a><span>₽140</span>
                     </div>
                     <div class="menu-size">
-                        <a>100 гр</a>
+                        <a>250 гр</a>
                     </div>
                 </div>
 
