--- a/menu.html
+++ b/menu.html
@@ -100,7 +100,7 @@
             </div>
 
             <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
-                               <!-- ======= Кофе ======= -->
+                <!-- ======= Кофе ======= -->
                 <div class="col-lg-6 menu-item filter-coffee">
                     <div class="menu-sections">
                         <h2>Кофе</h2>
@@ -108,27 +108,27 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-coffee">
                     <div class="menu-content">
-                        <a>Чай 70</a><span>₽</span>
+                        <a>Чай</a><span>₽70</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-coffee">
                     <div class="menu-content">
-                        <a>Латте 120</a><span>₽</span>
+                        <a>Латте</a><span>₽120</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-coffee">
                     <div class="menu-content">
-                        <a>Капучино 100</a><span>₽</span>
+                        <a>Капучино</a><span>₽100</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-coffee">
                     <div class="menu-content">
-                        <a>Американо 50</a><span>₽</span>
+                        <a>Американо</a><span>₽50</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-coffee">
                     <div class="menu-content">
-                        <a>Эспрессо 50</a><span>₽</span>
+                        <a>Эспрессо</a><span>₽50</span>
                     </div>
                 </div>
 
@@ -274,7 +274,6 @@
                 </div>
 
 
-
                 <!-- ======= Пиво ======= -->
                 <div class="col-lg-6 menu-item filter-beer">
                     <div class="menu-sections">
@@ -283,54 +282,64 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-">
                     <div class="menu-content">
-                        <a>IPA 260</a><span>₽</span>
+                        <a>IPA</a><span>₽260</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-">
                     <div class="menu-content">
-                        <a>Лагер Тельман 0,5 220</a><span>₽</span>
+                        <a>Лагер Тельман</a><span>₽220</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>0,5 л</a>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-">
                     <div class="menu-content">
-                        <a>Крафт банка 350</a><span>₽</span>
+                        <a>Крафт банка</a><span>₽350</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-">
                     <div class="menu-content">
-                        <a>Peterhof 0,5 150</a><span>₽</span>
+                        <a>Peterhof</a><span>₽150</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>0,5 л</a>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-">
                     <div class="menu-content">
-                        <a>Черничный страут 0,5 240</a><span>₽</span>
+                        <a>Черничный страут</a><span>₽240</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>0,5 л</a>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-">
                     <div class="menu-content">
-                        <a>Томатный Гозе 250</a><span>₽</span>
+                        <a>Томатный Гозе</a><span>₽250</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a><!-- =======  ======= --></a><span>₽</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Шато Тамань Белое 280</a><span>₽</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Шато Тамань Игристое 250</a><span>₽</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-">
-                    <div class="menu-content">
-                        <a>Шато Тамань Розовое 280</a><span>₽</span>
-                    </div>
-                </div>
+
+                <!--                <div class="col-lg-6 menu-item filter-">-->
+                <!--                    <div class="menu-content">-->
+                <!--                        <a>&lt;!&ndash; =======  ======= &ndash;&gt;</a><span>₽</span>-->
+                <!--                    </div>-->
+                <!--                </div>-->
+                <!--                <div class="col-lg-6 menu-item filter-">-->
+                <!--                    <div class="menu-content">-->
+                <!--                        <a>Шато Тамань Белое 280</a><span>₽</span>-->
+                <!--                    </div>-->
+                <!--                </div>-->
+                <!--                <div class="col-lg-6 menu-item filter-">-->
+                <!--                    <div class="menu-content">-->
+                <!--                        <a>Шато Тамань Игристое 250</a><span>₽</span>-->
+                <!--                    </div>-->
+                <!--                </div>-->
+                <!--                <div class="col-lg-6 menu-item filter-">-->
+                <!--                    <div class="menu-content">-->
+                <!--                        <a>Шато Тамань Розовое 280</a><span>₽</span>-->
+                <!--                    </div>-->
+                <!--                </div>-->
 
 
                 <!-- ======= БЕЗАЛКОГОЛЬНЫЕ НАПИТКИ ======= -->
@@ -341,37 +350,43 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-soft-drinks">
                     <div class="menu-content">
-                        <a>ADRENALINE Rush 0,5л 150</a><span>₽</span>
+                        <a>ADRENALINE Rush</a><span>₽150</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>0,5 л</a>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-soft-drinks">
                     <div class="menu-content">
-                        <a>AQUA MINERALE 0,5л 80</a><span>₽</span>
+                        <a>AQUA MINERALE</a><span>₽80</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>0,5 л</a>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-soft-drinks">
                     <div class="menu-content">
-                        <a>ЛИМОНАД 55</a><span>₽</span>
+                        <a>ЛИМОНАД</a><span>₽55</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-soft-drinks">
                     <div class="menu-content">
-                        <a>Напиток "Кока-кола" 440</a><span>₽</span>
+                        <a>Напиток "Кока-кола"</a><span>₽440</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-soft-drinks">
                     <div class="menu-content">
-                        <a>Топпинг 35</a><span>₽</span>
+                        <a>Топпинг</a><span>₽35</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-soft-drinks">
                     <div class="menu-content">
-                        <a>Тоник 300</a><span>₽</span>
+                        <a>Тоник</a><span>₽300</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-soft-drinks">
                     <div class="menu-content">
-                        <a>Сок 400</a><span>₽</span>
+                        <a>Сок</a><span>₽400</span>
                     </div>
                 </div>
 
@@ -384,17 +399,23 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-tequila">
                     <div class="menu-content">
-                        <a>Пачука Сильвер 180</a><span>₽</span>
+                        <a>Пачука Сильвер</a><span>₽180</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>50 мл</a>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-tequila">
                     <div class="menu-content">
-                        <a>Текила сильвер NEWTON 50мл 200</a><span>₽</span>
+                        <a>Текила сильвер NEWTON</a><span>₽200</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>50 мл</a>
                     </div>
                 </div>
 
 
-                 <!-- ======= Ром ======= -->
+                <!-- ======= Ром ======= -->
                 <div class="col-lg-6 menu-item filter-rum">
                     <div class="menu-sections">
                         <h2>Ром</h2>
@@ -402,22 +423,28 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-">
                     <div class="menu-content">
-                        <a>Олд Монк Выдерж. 200</a><span>₽</span>
+                        <a>Олд Монк Выдержанный</a><span>₽200</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-">
                     <div class="menu-content">
-                        <a>Олд Монк Белый 170</a><span>₽</span>
+                        <a>Олд Монк Белый</a><span>₽170</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-">
                     <div class="menu-content">
-                        <a>РОМ ЭЛЕ БОКО БЛЕК 50мл 160</a><span>₽</span>
+                        <a>РОМ ЭЛЕ БОКО БЛЕК</a><span>₽160</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>50 мл</a>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-">
                     <div class="menu-content">
-                        <a>РОМ ЭЛЕ БОКО ВАЙТ 50мл 160</a><span>₽</span>
+                        <a>РОМ ЭЛЕ БОКО ВАЙТ</a><span>₽160</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>50 мл</a>
                     </div>
                 </div>
 
@@ -430,52 +457,70 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-whiskey">
                     <div class="menu-content">
-                        <a>Джим Бим 250</a><span>₽</span>
+                        <a>Джим Бим</a><span>₽250</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-whiskey">
                     <div class="menu-content">
-                        <a>Джим Бим Ред Стаг 250</a><span>₽</span>
+                        <a>Джим Бим Ред Стаг</a><span>₽250</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-whiskey">
                     <div class="menu-content">
-                        <a>Джим Бим Хани 250</a><span>₽</span>
+                        <a>Джим Бим Хани</a><span>₽250</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-whiskey">
                     <div class="menu-content">
-                        <a>Джим Бим Эппл 250</a><span>₽</span>
+                        <a>Джим Бим Эппл</a><span>₽250</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-whiskey">
                     <div class="menu-content">
-                        <a>Blend 50мл 180</a><span>₽</span>
+                        <a>Blend</a><span>₽180</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>50 мл</a>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-whiskey">
                     <div class="menu-content">
-                        <a>GlenDale 50мл 230</a><span>₽</span>
+                        <a>GlenDale</a><span>₽230</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>50 мл</a>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-whiskey">
                     <div class="menu-content">
-                        <a>William Watt 50мл 150</a><span>₽</span>
+                        <a>William Watt</a><span>₽150</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>50 мл</a>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-whiskey">
                     <div class="menu-content">
-                        <a>КЕНТУКИ БОУТ 50мл 230</a><span>₽</span>
+                        <a>КЕНТУКИ БОУТ</a><span>₽230</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>50 мл</a>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-whiskey">
                     <div class="menu-content">
-                        <a>МАК ДУКАН МЁД 50мл 100</a><span>₽</span>
+                        <a>МАК ДУКАН МЁД</a><span>₽100</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>50 мл</a>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-whiskey">
                     <div class="menu-content">
-                        <a>Royal Hunt 50мл 150</a><span>₽</span>
+                        <a>Royal Hunt</a><span>₽150</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>50 мл</a>
                     </div>
                 </div>
 
@@ -488,57 +533,81 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-vodka">
                     <div class="menu-content">
-                        <a>Настойка 150мл 150р</a><span>₽</span>
+                        <a>Настойка</a><span>₽150р</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>150 мл</a>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-vodka">
                     <div class="menu-content">
-                        <a>Самагон 150</a><span>₽</span>
+                        <a>Самагон</a><span>₽150</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-vodka">
                     <div class="menu-content">
-                        <a>Царская Золотая</a><span>₽</span>
+                        <a>Царская Золотая</a><span>₽120</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-vodka">
                     <div class="menu-content">
-                        <a>Царская Ориг 100</a><span>₽</span>
+                        <a>Царская Ориг</a><span>₽100</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-vodka">
                     <div class="menu-content">
-                        <a>ЦАРСКАЯ ГРУША 50мл 130</a><span>₽</span>
+                        <a>ЦАРСКАЯ ГРУША</a><span>₽130</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>50 мл</a>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-vodka">
                     <div class="menu-content">
-                        <a>Царская грейпфрут 50мл 130</a><span>₽</span>
+                        <a>Царская грейпфрут</a><span>₽130</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>50 мл</a>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-vodka">
                     <div class="menu-content">
-                        <a>ЦАРСКАЯ СЕЛО 50мл 130</a><span>₽</span>
+                        <a>ЦАРСКАЯ СЕЛО</a><span>₽130</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>50 мл</a>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-vodka">
                     <div class="menu-content">
-                        <a>ЦАРСКАЯ ЦИТРОН 50мл 130</a><span>₽</span>
+                        <a>ЦАРСКАЯ ЦИТРОН</a><span>₽130</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>50 мл</a>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-vodka">
                     <div class="menu-content">
-                        <a>ЦАРСКАЯ  МАЛИНА 50мл 130</a><span>₽</span>
+                        <a>ЦАРСКАЯ МАЛИНА</a><span>₽130</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>50 мл</a>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-vodka">
                     <div class="menu-content">
-                        <a>ЦАРСКАЯ  КЛЮКВЕННАЯ 50мл 130</a><span>₽</span>
+                        <a>ЦАРСКАЯ КЛЮКВЕННАЯ</a><span>₽130</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>50 мл</a>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-vodka">
                     <div class="menu-content">
-                        <a>Чайковский водка 50мл 150</a><span>₽</span>
+                        <a>Чайковский водка</a><span>₽150</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>50 мл</a>
                     </div>
                 </div>
             </div>
