--- a/menu.html
+++ b/menu.html
@@ -95,6 +95,7 @@
                         <li data-filter=".filter-rum">Ром</li>
                         <li data-filter=".filter-tequila">Текила</li>
                         <li data-filter=".filter-coffee">Кофе</li>
+                        <li data-filter=".filter-champagne">Шампанское</li>
                     </ul>
                 </div>
             </div>
@@ -280,12 +281,12 @@
                         <h2>Пиво 🍺</h2>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-">
+                <div class="col-lg-6 menu-item filter-beer">
                     <div class="menu-content">
                         <a>IPA</a><span>₽260</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-">
+                <div class="col-lg-6 menu-item filter-beer">
                     <div class="menu-content">
                         <a>Лагер Тельман</a><span>₽220</span>
                     </div>
@@ -293,12 +294,12 @@
                         <a>0,5 л</a>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-">
+                <div class="col-lg-6 menu-item filter-beer">
                     <div class="menu-content">
                         <a>Крафт банка</a><span>₽350</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-">
+                <div class="col-lg-6 menu-item filter-beer">
                     <div class="menu-content">
                         <a>Peterhof</a><span>₽150</span>
                     </div>
@@ -306,7 +307,7 @@
                         <a>0,5 л</a>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-">
+                <div class="col-lg-6 menu-item filter-beer">
                     <div class="menu-content">
                         <a>Черничный страут</a><span>₽240</span>
                     </div>
@@ -314,32 +315,33 @@
                         <a>0,5 л</a>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-">
+                <div class="col-lg-6 menu-item filter-beer">
                     <div class="menu-content">
                         <a>Томатный Гозе</a><span>₽250</span>
                     </div>
                 </div>
 
-                <!--                <div class="col-lg-6 menu-item filter-">-->
-                <!--                    <div class="menu-content">-->
-                <!--                        <a>&lt;!&ndash; =======  ======= &ndash;&gt;</a><span>₽</span>-->
-                <!--                    </div>-->
-                <!--                </div>-->
-                <!--                <div class="col-lg-6 menu-item filter-">-->
-                <!--                    <div class="menu-content">-->
-                <!--                        <a>Шато Тамань Белое 280</a><span>₽</span>-->
-                <!--                    </div>-->
-                <!--                </div>-->
-                <!--                <div class="col-lg-6 menu-item filter-">-->
-                <!--                    <div class="menu-content">-->
-                <!--                        <a>Шато Тамань Игристое 250</a><span>₽</span>-->
-                <!--                    </div>-->
-                <!--                </div>-->
-                <!--                <div class="col-lg-6 menu-item filter-">-->
-                <!--                    <div class="menu-content">-->
-                <!--                        <a>Шато Тамань Розовое 280</a><span>₽</span>-->
-                <!--                    </div>-->
-                <!--                </div>-->
+                <!-- ======= Шампанское ======= -->
+                <div class="col-lg-6 menu-item filter-champagne">
+                    <div class="menu-sections">
+                        <h2>Шампанское</h2>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-champagne">
+                    <div class="menu-content">
+                        <a>Шато Тамань Белое 280</a><span>₽</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-champagne">
+                    <div class="menu-content">
+                        <a>Шато Тамань Игристое 250</a><span>₽</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-champagne">
+                    <div class="menu-content">
+                        <a>Шато Тамань Розовое 280</a><span>₽</span>
+                    </div>
+                </div>
 
 
                 <!-- ======= БЕЗАЛКОГОЛЬНЫЕ НАПИТКИ ======= -->
@@ -421,17 +423,17 @@
                         <h2>Ром</h2>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-">
+                <div class="col-lg-6 menu-item filter-rum">
                     <div class="menu-content">
                         <a>Олд Монк Выдержанный</a><span>₽200</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-">
+                <div class="col-lg-6 menu-item filter-rum">
                     <div class="menu-content">
                         <a>Олд Монк Белый</a><span>₽170</span>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-">
+                <div class="col-lg-6 menu-item filter-rum">
                     <div class="menu-content">
                         <a>РОМ ЭЛЕ БОКО БЛЕК</a><span>₽160</span>
                     </div>
@@ -439,7 +441,7 @@
                         <a>50 мл</a>
                     </div>
                 </div>
-                <div class="col-lg-6 menu-item filter-">
+                <div class="col-lg-6 menu-item filter-rum">
                     <div class="menu-content">
                         <a>РОМ ЭЛЕ БОКО ВАЙТ</a><span>₽160</span>
                     </div>
