--- a/menu.html
+++ b/menu.html
@@ -329,17 +329,17 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-champagne">
                     <div class="menu-content">
-                        <a>Шато Тамань Белое 280</a><span>₽</span>
+                        <a>Шато Тамань Белое</a><span>₽280</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-champagne">
                     <div class="menu-content">
-                        <a>Шато Тамань Игристое 250</a><span>₽</span>
+                        <a>Шато Тамань Игристое</a><span>₽250</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-champagne">
                     <div class="menu-content">
-                        <a>Шато Тамань Розовое 280</a><span>₽</span>
+                        <a>Шато Тамань Розовое</a><span>₽280</span>
                     </div>
                 </div>
 
