--- a/menu.html
+++ b/menu.html
@@ -104,7 +104,7 @@
                 <!-- ======= Кофе ======= -->
                 <div class="col-lg-6 menu-item filter-coffee">
                     <div class="menu-sections">
-                        <h2>Кофе</h2>
+                        <h2>Кофе ☕️</h2>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-coffee">
@@ -324,7 +324,7 @@
                 <!-- ======= Шампанское ======= -->
                 <div class="col-lg-6 menu-item filter-champagne">
                     <div class="menu-sections">
-                        <h2>Шампанское</h2>
+                        <h2>Шампанское 🍾</h2>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-champagne">
@@ -396,7 +396,7 @@
                 <!-- ======= Текила ======= -->
                 <div class="col-lg-6 menu-item filter-tequila">
                     <div class="menu-sections">
-                        <h2>Текила</h2>
+                        <h2>Текила 🌵</h2>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-tequila">
