--- a/menu.html
+++ b/menu.html
@@ -87,9 +87,12 @@
                 <div class="col-lg-12 d-flex justify-content-center">
                     <ul id="menu-flters">
                         <li data-filter="*" class="filter-active">Всё</li>
+                        <li data-filter=".filter-liqueurs-aperitifs">Ликёры / Аперетивы</li>
                         <li data-filter=".filter-soft-drinks">Без алкогольные напитки</li>
                         <li data-filter=".filter-whiskey">Виски</li>
                         <li data-filter=".filter-vodka">Водка</li>
+                        <li data-filter=".filter-calvados">Кальвадос</li>
+                        <li data-filter=".filter-cognac">Коньяк</li>
                         <li data-filter=".filter-kitchen">Кухня</li>
                         <li data-filter=".filter-beer">Пиво</li>
                         <li data-filter=".filter-rum">Ром</li>
@@ -101,6 +104,127 @@
             </div>
 
             <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
+                <!-- ======= Calvados ======= -->
+                <div class="col-lg-6 menu-item filter-calvados">
+                    <div class="menu-sections">
+                        <h2>Calvados</h2>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 menu-item filter-calvados">
+                    <div class="menu-content">
+                        <a>Pere Magloire Fine V.S</a><span>₽500</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>50 мл</a>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-calvados">
+                    <div class="menu-content">
+                        <a>Pomme de Victor</a><span>₽300</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>50 мл</a>
+                    </div>
+                </div>
+                <!-- ======= КОНЬЯК ======= -->
+                <div class="col-lg-6 menu-item filter-cognac">
+                    <div class="menu-sections">
+                        <h2>Коньяк</h2>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-cognac">
+                    <div class="menu-content">
+                        <a>Старейшина 3 года</a><span>₽150</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-cognac">
+                    <div class="menu-content">
+                        <a>Кальвадос Помм Де Виктор</a><span>₽150</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-cognac">
+                    <div class="menu-content">
+                        <a>Жак Де Ла Круа</a><span>₽150</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-cognac">
+                    <div class="menu-content">
+                        <a>Рулле ВСОП</a><span>₽540</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>50 мл</a>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-cognac">
+                    <div class="menu-content">
+                        <a>Брюннель Наполеон VSOP</a><span>₽240</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>50 мл</a>
+                    </div>
+                </div>
+
+
+                <!-- ======= Аперетивы / Ликер ======= -->
+                <div class="col-lg-6 menu-item filter-liqueurs-aperitifs">
+                    <div class="menu-sections">
+                        <h2>Аперетивы / Ликер</h2>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-liqueurs-aperitifs">
+                    <div class="menu-content">
+                        <a>Абсент Оазис</a><span>₽150</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-liqueurs-aperitifs">
+                    <div class="menu-content">
+                        <a>Тундра Битер</a><span>₽150</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-liqueurs-aperitifs">
+                    <div class="menu-content">
+                        <a>Тундра Битер Минт</a><span>₽150</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-liqueurs-aperitifs">
+                    <div class="menu-content">
+                        <a>Аппероль</a><span>₽180</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-liqueurs-aperitifs">
+                    <div class="menu-content">
+                        <a>Мартини Экстра Драй</a><span>₽150</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-liqueurs-aperitifs">
+                    <div class="menu-content">
+                        <a>Тундра Битер Оранж</a><span>₽150</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-liqueurs-aperitifs">
+                    <div class="menu-content">
+                        <a>Самбука Нива</a><span>₽150</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-liqueurs-aperitifs">
+                    <div class="menu-content">
+                        <a>Аперетиво</a><span>₽100</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>50 мл</a>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-liqueurs-aperitifs">
+                    <div class="menu-content">
+                        <a>Limonica Sambuca Extra</a><span>₽160</span>
+                    </div>
+                    <div class="menu-size">
+                        <a>50 мл</a>
+                    </div>
+                </div>
+
+
                 <!-- ======= Кофе ======= -->
                 <div class="col-lg-6 menu-item filter-coffee">
                     <div class="menu-sections">
